[tool.poetry]
name = "bgptools-scripts"
version = "0.1.0"
description = ""
authors = ["Siyuan Miao <i@xswan.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
netaddr = "^0.8.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
